--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ sites/default/files
 sites/default/settings.php
 .htaccess
 sites/all/themes/diszkont/images/icons
+sites/all/themes/diszkont/images/icons/*
+
