--- a/sites/all/libraries/fontfaceobserver/package.json
+++ b/sites/all/libraries/fontfaceobserver/package.json
@@ -1,11 +1,18 @@
 {
   "name": "fontfaceobserver",
-  "version": "1.7.1",
+  "version": "2.0.5",
   "description": "Detect if web fonts are available",
   "directories": {
     "test": "test"
   },
-  "repository": "https://github.com/bramstein/fontfaceobserver.git",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/bramstein/fontfaceobserver.git"
+  },
+  "bugs": {
+    "url": "https://github.com/bramstein/fontfaceobserver/issues"
+  },
+  "homepage": "https://fontfaceobserver.com/",
   "main": "fontfaceobserver.standalone.js",
   "keywords": [
     "fontloader",
@@ -26,19 +33,20 @@
   "license": "BSD-3-Clause",
   "dependencies": {},
   "devDependencies": {
+    "closure-dom": "=0.2.6",
     "extend": "^3.0.0",
-    "closure-dom": "=0.2.3",
-    "promis": "=1.1.4",
     "grunt": "^0.4.5",
     "grunt-closurecompiler": "^0.9.9",
-    "grunt-contrib-clean": "=1.0.0",
-    "grunt-contrib-concat": "^1.0.0",
+    "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-jshint": "^1.0.0",
+    "grunt-exec": "~1.0.0",
+    "mocha": "^2.5.3",
     "mocha-phantomjs-core": "^2.0.0",
-    "grunt-exec": "~0.4.6",
-    "mocha": "=2.4.5",
-    "sinon": "=1.17.3",
-    "unexpected": "^10.10.12"
+    "phantomjs-prebuilt": "^2.1.7",
+    "promis": "=1.1.4",
+    "sinon": "^1.17.4",
+    "unexpected": "^10.14.2"
   },
   "scripts": {
     "test": "grunt test"
